--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
   </head>
   <body>
     <div class="main-wrapper">
+      <dialog class="to-do-dialog">
+        <form action="">
+          <label for="title">Title</label>
+          <input type="text" id="title" />
+          <label for="details">Details</label>
+          <textarea name="details" id="details"></textarea>
+          <label for="priority">Priority</label>
+          <select name="priority" id="priority">
+            <option value="low">Low</option>
+            <option value="medium" selected>Medium</option>
+            <option value="high">High</option>
+          </select>
+          <label for="due-date">Due on</label>
+          <input type="date" id="due-date" class="due-date" />
+          <div class="button-container">
+            <button class="submit-to-do">Submit</button>
+            <button class="cancel-to-do">Cancel</button>
+          </div>
+        </form>
+      </dialog>
       <nav class="nav-bar">
         <div class="logo-box">
           <svg
@@ -26,13 +46,24 @@
         <div class="projects-section">
           <h3>Projects</h3>
           <button class="add-project">Add Project</button>
-          
+          <dialog class="project-dialog">
+            <form action="">
+              <input
+                type="text"
+                placeholder="Project name"
+                class="project-name"
+              />
+              <div class="button-container">
+                <button class="create-project">Create Project</button>
+                <button class="cancel-project">Cancel</button>
+              </div>
+            </form>
+          </dialog>
+          <h3>Current Projects</h3>
         </div>
       </nav>
       <main class="main"></main>
     </div>
-    <!-- <h1>Welcome to MyPriority</h1>
-    <h2>Create a "to-do" and add it to a project.</h2> -->
     <script type="module" src="./main.js"></script>
   </body>
 </html>
