--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
         </svg>
       </main>
       <dialog class="to-do-dialog">
-        <form action="">
+        <form class="add-to-do-form" action="">
           <label for="title">Title</label>
           <input type="text" id="title" />
           <label for="details">Details</label>
           <textarea name="details" id="details"></textarea>
           <label for="priority">Priority</label>
           <select name="priority" id="priority">
-            <option value="not important">Not Important</option>
-            <option value="important" selected>Important</option>
+            <option value="High">High</option>
+            <option value="Medium" selected>Medium</option>
+            <option value="Low">Low</option>
           </select>
           <label for="due-date">Due on</label>
           <input type="date" id="due-date" />
@@ -56,6 +57,12 @@
           <h2 class="logo-text">Prioritise</h2>
         </div>
         <button class="add-to-do">Add to-do</button>
+        <h3>Organise </h3>
+        <h3>Do it now</h3>
+        <h3>Do it soon</h3>
+        <h3>Delegate it</h3>
+        <h3>Delete it</h3>
+
         <div class="projects-section">
           <h3>Projects</h3>
           <button class="add-project">Add Project</button>
