functional organise by status

--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
           <h2 class="logo-text">Prioritise</h2>
         </div>
         <button class="add-to-do">Add to-do</button>
-        <h3>Organise </h3>
-        <h3>Do it now</h3>
-        <h3>Do it soon</h3>
-        <h3>Delegate it</h3>
-        <h3>Delete it</h3>
+        <h3 class="home-group">Home</h3>
+        <h4 class="high-priority">High Priority</h4>
+        <h4 class="medium-priority">Medium Priority</h4>
+        <h4 class="low-priority">Low Priority</h4>
+
+
 
         <div class="projects-section">
           <h3>Projects</h3>
           <button class="add-project">Add Project</button>
           <dialog class="project-dialog">
-            <form action="">
+            <form class="project-form" action="">
               <input
                 type="text"
                 placeholder="Project name"
@@ -79,7 +80,7 @@
               </div>
             </form>
           </dialog>
-          <h3>Current Projects</h3>
+          <h4 class="current-projects">Current Projects</h4>
         </div>
       </nav>
     </div>
