some button UI changes

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         </div>
         <button class="add-to-do">Add to-do</button>
         <h3 class="home-group">Home</h3>
-        <h4 class="high-priority">High Priority</h4>
-        <h4 class="medium-priority">Medium Priority</h4>
-        <h4 class="low-priority">Low Priority</h4>
+        <ul class="top-list">
+          <li class="high-priority">High Priority</li>
+          <li class="medium-priority">Medium Priority</li>
+          <li class="low-priority">Low Priority</li>
+        </ul>
 
         <div class="projects-section">
           <h3>Projects</h3>
@@ -78,7 +80,7 @@
               </div>
             </form>
           </dialog>
-          <h4 class="current-projects">Current Projects</h4>
+          <div class="current-projects"></div>
         </div>
         <dialog class="project-to-do-dialog">
           <form class="project-add-to-do-form" action="">
