--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <div class="main-wrapper">
       <main class="main">
         <h1>Welcome to Prioritise.</h1>
-        <h2>Organise your tasks using the priority matrix</h2>
-        <h3>View tasks by priority or project</h3>
+        <h3>Add tasks and view them by priority or project</h3>
         <svg
           class="main-logo"
           xmlns="http://www.w3.org/2000/svg"
@@ -54,9 +53,13 @@
               d="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z"
             />
           </svg>
-          <h2 class="logo-text">Prioritise</h2>
+          <h3 class="logo-text">Prioritise</h3>
         </div>
-        <button class="add-to-do">Add to-do</button>
+        <div class="buttons">
+          <button class="add-to-do">Add to-do</button>
+          <button class="add-project">Add Project</button>
+        </div>
+
         <h3 class="home-group">Home</h3>
         <ul class="top-list">
           <li class="high-priority">High Priority</li>
@@ -66,7 +69,6 @@
 
         <div class="projects-section">
           <h3>Projects</h3>
-          <button class="add-project">Add Project</button>
           <dialog class="project-dialog">
             <form class="project-form" action="">
               <input
