further UI update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
         </div>
         <div class="buttons">
           <button class="add-to-do">Add to-do</button>
-          <button class="add-project">Add Project</button>
         </div>
 
         <h3 class="home-group">Home</h3>
@@ -68,7 +67,8 @@
         </ul>
 
         <div class="projects-section">
-          <h3>Projects</h3>
+          <h3>My Projects</h3>
+          <button class="add-project">Add Project</button>
           <dialog class="project-dialog">
             <form class="project-form" action="">
               <input
