--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <dialog class="to-do-dialog">
         <form class="add-to-do-form" action="">
           <label for="title">Title</label>
-          <input type="text" id="title" required />
-          <label for="details">Details</label>
+          <input type="text" id="title" required placeholder="What to do?"/>
+          <label for="details" value="Do da ting!">Details</label>
           <textarea name="details" id="details" required></textarea>
           <label for="priority">Priority</label>
           <select name="priority" id="priority">
